DM-119 Update marina usage tracking for emails and texts
